--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
 
 
         <EditText
+            android:id="@+id/titleEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"/>
@@ -32,6 +33,7 @@
 
 
         <EditText
+            android:id="@+id/placeEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"/>
@@ -47,12 +49,14 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/startDateBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="시작 일시"/>
 
             <Button
+                android:id="@+id/startTimeBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -69,6 +73,7 @@
         android:layout_weight="1"/>
 
     <Button
+        android:id="@+id/saveBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="저장"/>
