--- a/app/src/main/res/layout/activity_edit_schedule.xml
+++ b/app/src/main/res/layout/activity_edit_schedule.xml
@@ -38,7 +38,16 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"/>
 
+        <Spinner
+            android:layout_marginTop="5dp"
+            android:entries="@array/schedule_type"
+            android:layout_width="match_parent"
+            android:spinnerMode="dialog"
+            android:layout_height="wrap_content"/>
+
+
         <TextView
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="일시"/>
@@ -49,6 +58,7 @@
             android:orientation="horizontal">
 
             <Button
+
                 android:id="@+id/startDateBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
