어댑터뷰 / 스피너 연결  => 목록을 보려고 누르면 앱이 죽는 상태.

--- a/app/src/main/res/layout/activity_edit_schedule.xml
+++ b/app/src/main/res/layout/activity_edit_schedule.xml
@@ -45,6 +45,12 @@
             android:spinnerMode="dialog"
             android:layout_height="wrap_content"/>
 
+        <Spinner
+            android:layout_marginTop="20dp"
+            android:id="@+id/scheduleTypeSpinner"
+            android:layout_width="match_parent"
+            android:spinnerMode="dialog"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_marginTop="15dp"
