--- a/app/src/main/res/layout/schedule_type_view_item.xml
+++ b/app/src/main/res/layout/schedule_type_view_item.xml
@@ -11,6 +11,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/summaryTxt"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="#FF0000"
@@ -20,6 +21,7 @@
             android:textStyle="bold"/>
 
         <TextView
+            android:id="@+id/typeTxt"
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
